style: text alignmed in product detail fixed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -581,9 +581,7 @@ select {
   font-weight: bold;
 }
 
-.admin-product-detail p {
-  align-self: flex-start;
-}
+
 
 .image-container {
   display: flex;
